samples/_failures_safe/1761429090_88a35d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7552ea2a.c: In function ‘main’:
./samples/SAFE/__tmp_7552ea2a.c:181:52: error: expected ‘)’ at end of input
  181 |         if (scanf("%d %d %d", &src, &dest, &weight)
      |            ~                                       ^
      |                                                    )
./samples/SAFE/__tmp_7552ea2a.c:181:9: error: expected declaration or statement at end of input
  181 |         if (scanf("%d %d %d", &src, &dest, &weight)
      |         ^~
./samples/SAFE/__tmp_7552ea2a.c:181:9: error: expected declaration or statement at end of input
